@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline

skinparam classAttributeIconSize 0

hide circle
hide empty fields

class Agent {}

class Owner {}

class AdvertisementRequest {
price
dateOfRequest
}

class Advertisement {
dateOfAdvertisement
}



class TypeOfCommission{
designation
}

class Commission{
value
}

class Property {
area
distanceCityCentre
}

Agent"1" -- "*"Advertisement: publishes >
Agent"1" -- "*"Commission: sets >

Commission"*" -- "1"TypeOfCommission: characterized by >
Commission"1" -- "1"Advertisement: present in >

Property"1" -- "1"Advertisement: describes <
Property"1" -u- "1"AdvertisementRequest: describes <

AdvertisementRequest"*" - "1" Agent: validates <
AdvertisementRequest"1" -- "1" Advertisement: derives from <
AdvertisementRequest"*" --l "1" Owner: requests <

@enduml